# task

./: .gitignore  README.md
neis/: 00_fetch_school_info.py  01_find_meal.py  01_find_meal.py.old  README.md  main.py  pyproject.toml
ocr/: 00_get_filename.py  01_find_code.py  README.md  pyproject.toml
routemap/: map_old.html  prompt.md  sample.html
routemap/src/: convert.py  emd.geojson  emd.js  map.html  sgg.geojson  sgg.js  sido.geojson  sido.js
